# whisper_python

./: .gitignore  LICENSE  README.md  README_AF.md  README_AR.md  README_EN.md  README_HI.md  README_JA.md  README_KO.md  README_RU.md  README_TH.md  README_zh-CN.md  generate_language_readme_gpl.md
example/: README.md
package/whisper_python/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  quickstart.py
package/whisper_python/.github/: FUNDING.yaml
package/whisper_python/lib/: whisper_python.py
package/whisper_python/lib/whisper_python/: __init__.py  whisper_python.py
package/whisper_python/lib/whisper_python/zeroun_intezar_agler/: __init__.py  zeroun_intezar_agler.py
package/whisper_python/lib/zeroun_intezar_agler/: zeroun_intezar_agler.py
quickstart/: .gitignore  README.md
quickstart/example/: README.md
